src/test/ui/gated-bad-feature.stderr
error[E0556]: malformed `feature` attribute input
  --> $DIR/gated-bad-feature.rs:1:25
   |
LL | #![feature(foo_bar_baz, foo(bar), foo = "baz", foo)]
   |                         ^^^^^^^^ help: expected just one word: `foo`

error[E0556]: malformed `feature` attribute input
  --> $DIR/gated-bad-feature.rs:1:35
   |
LL | #![feature(foo_bar_baz, foo(bar), foo = "baz", foo)]
   |                                   ^^^^^^^^^^^ help: expected just one word: `foo`

error[E0557]: feature has been removed
  --> $DIR/gated-bad-feature.rs:8:12
   |
LL | #![feature(test_removed_feature)]
   |            ^^^^^^^^^^^^^^^^^^^^ feature has been removed

error: malformed `feature` attribute input
  --> $DIR/gated-bad-feature.rs:5:1
   |
LL | #![feature]
   | ^^^^^^^^^^^ help: must be of the form: `#[feature(name1, name1, ...)]`

error: malformed `feature` attribute input
  --> $DIR/gated-bad-feature.rs:6:1
   |
LL | #![feature = "foo"]
   | ^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[feature(name1, name1, ...)]`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0557`.
